fixed styling causing questions remaining and rage bar to go offscreen with developer console open

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ main {
   width: 960px;
   margin: 0px auto;
   text-align: center;
-  border: 1px solid black;
 }
 
 main ul {
@@ -58,6 +57,10 @@ img {
   position: relative;
 }
 
+section {
+  position: relative;
+}
+
 progress {
   /* background-color: black; */
   display: block;
@@ -67,9 +70,8 @@ progress {
   transform: rotate(90deg);
   float: right;
   position: absolute;
-  top: 550px;
-  left: 800px;
-
+  top: 150px;
+  left: 750px;
   height: 75px;
   border-radius: 50px;
   padding: 15px 0px 0px 0px;
@@ -91,8 +93,8 @@ progress::-webkit-progress-value {
 
 #question-remaining-section {
   position: absolute;
-  top: 400px;
-  left: 150px;
+  top: 150px;
+  left: 100px;
   float: left;
   max-width: 100px;
   margin: 0px auto;
